Move warning markup into view files for readability and correctness.

--- a/components/main/style.scss
+++ b/components/main/style.scss
@@ -4,3 +4,7 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.qni-main .notice {
+	margin-top: 1em;
+}
